# EdenScope-AI-Driven-Plant-Health-Monitor

./: .gitignore  README.md  S3ProcessingService.py  S3_Poll_Image.py  S3_Poll_Image_V12X.py  joystick_control.py  mac_s3_upload_fetch.py  process_all_users_images.py  process_all_users_images_V12X.py  win_s3_process_images.py  win_s3_process_images_V12X.py  环境配置.txt
PlantHealthMonitorApplication/: build.gradle.kts  settings.gradle.kts
PlantHealthMonitorApplication/amplify/: team-provider-info.json
PlantHealthMonitorApplication/amplify-backup/: team-provider-info.json
PlantHealthMonitorApplication/amplify-backup/#current-cloud-backend/: backend-config.json
PlantHealthMonitorApplication/amplify-backup/#current-cloud-backend/api/edenplanthealthapp/: cli-inputs.json  parameters.json
PlantHealthMonitorApplication/amplify-backup/#current-cloud-backend/auth/edenplanthealthappe9aecd67/: cli-inputs.json
PlantHealthMonitorApplication/amplify-backup/.config/: local-aws-info.json  local-env-info.json  project-config.json
PlantHealthMonitorApplication/amplify-backup/backend/: amplify-meta.json
PlantHealthMonitorApplication/amplify-backup/backend/types/: amplify-dependent-resources-ref.d.ts
PlantHealthMonitorApplication/amplify/backend/: backend-config.json
PlantHealthMonitorApplication/amplify/backend/api/edenplanthealthapp/: cli-inputs.json  parameters.json  schema.graphql
PlantHealthMonitorApplication/amplify/backend/auth/edenplanthealthappa19c7c31/: cli-inputs.json
PlantHealthMonitorApplication/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
PlantHealthMonitorApplication/app/: build.gradle.kts
PlantHealthMonitorApplication/app/src/main/: AndroidManifest.xml
PlantHealthMonitorApplication/gradle/: libs.versions.toml
PlantHealthMonitorApplication/gradle/wrapper/: gradle-wrapper.properties
PlantsDiseaseDetection/: Recognition_UI.py  YOLOv8v5Model.py  batch_process_images.py  run_test_camera.py  run_test_image.py  run_test_video.py  run_train_model.py
PlantsDiseaseDetection/datasets/PlantsDisease/: PlantsDisease.yaml  __init__.py
PlantsDiseaseDetection/datasets/PlantsDisease/train/: labels.cache
PlantsDiseaseDetection/datasets/PlantsDisease/valid/: labels.cache
PlantsDiseaseDetection/runs/detect/train_v5_PlantsDisease/: args.yaml
PlantsDiseaseDetection/tempDir/: log_table_data.csv  video_2024-03-06-14-49-15.avi
PlantsDiseaseDetection_V12X/: Recognition_UI.py  YOLOv12XModel.py  batch_process_images.py  process_test_images.py  run_test_camera.py  run_test_image.py  run_test_video.py  run_train_model.py  utils_web.py
PlantsDiseaseDetection_V12X/datasets/PlantsDisease/: label_name.py
PlantsDiseaseDetection_V12X/runs/detect/train_v5_PlantsDisease/: results.csv
PlantsDiseaseDetection_V12X/runs/detect/train_v8_PlantsDisease/: args.yaml  results.csv
PlantsDiseaseDetection_V12X/ultralytics/assets/: __init__.py
Shell_Script & System_Service/: edenscope_image_cleanup.service  edenscope_image_cleanup.sh  edenscope_process_images.service  edenscope_trigger_camera_capture.service  edenscope_trigger_camera_capture.sh  process_all_users_images.sh
Sony_Camera_SDK_V1.13_Linux64_ARMv8_Edenscope/: CMakeLists.txt
Sony_Camera_SDK_V1.13_Linux64_ARMv8_Edenscope/app/: CameraDevice.cpp  CameraDevice.h  CapturePhoto.cpp  RemoteCli.cpp
Sony_Camera_SDK_V1.13_Linux64_ARMv8_Edenscope/app/CRSDK/: CrDefines.h  CrDeviceProperty.h  CrError.h
Sony_Camera_SDK_V1.13_Linux64_ARMv8_Edenscope/cmake/: enum_cli_src.cmake
aws-iot-device-sdk-python-v2/samples/: edenscope_trigger_camera_capture.py
(+3754 files in other folders)
